@@ -50,7 +50,7 @@ public class TestArrayELResolver {
         ELContext context = new ELContextImpl();
 
         String[] base = new String[] { "element" };
-        Class<?> result = resolver.getType(context, base, Integer.valueOf(0));
+        Class<?> result = resolver.getType(context, base, new Integer(0));
 
         Assert.assertEquals(base.getClass().getComponentType(), result);
         Assert.assertTrue(context.isPropertyResolved());
@@ -65,22 +65,7 @@ public class TestArrayELResolver {
         ELContext context = new ELContextImpl();
 
         String[] base = new String[] { "element" };
-        resolver.getType(context, base, Integer.valueOf(1));
-    }
-
-    /**
-     * Tests that a result is returned even when a coercion cannot be performed.
-     */
-    @Test
-    public void testGetType05() {
-        ArrayELResolver resolver = new ArrayELResolver();
-        ELContext context = new ELContextImpl();
-
-        String[] base = new String[] { "element" };
-        Class<?> result = resolver.getType(context, base, "index");
-
-        Assert.assertEquals(base.getClass().getComponentType(), result);
-        Assert.assertTrue(context.isPropertyResolved());
+        resolver.getType(context, base, new Integer(1));
     }
 
     /**
@@ -110,7 +95,7 @@ public class TestArrayELResolver {
         ELContext context = new ELContextImpl();
 
         String[] base = new String[] { "element" };
-        Object result = resolver.getValue(context, base, Integer.valueOf(0));
+        Object result = resolver.getValue(context, base, new Integer(0));
 
         Assert.assertEquals("element", result);
         Assert.assertTrue(context.isPropertyResolved());
@@ -137,12 +122,12 @@ public class TestArrayELResolver {
         ELContext context = new ELContextImpl();
 
         String[] base = new String[] { "element" };
-        Object result = resolver.getValue(context, base, Integer.valueOf(1));
+        Object result = resolver.getValue(context, base, new Integer(1));
 
         Assert.assertNull(result);
         Assert.assertTrue(context.isPropertyResolved());
 
-        result = resolver.getValue(context, base, Integer.valueOf(-1));
+        result = resolver.getValue(context, base, new Integer(-1));
 
         Assert.assertNull(result);
         Assert.assertTrue(context.isPropertyResolved());
@@ -186,16 +171,16 @@ public class TestArrayELResolver {
         ELContext context = new ELContextImpl();
 
         String[] base = new String[] { "element" };
-        resolver.setValue(context, base, Integer.valueOf(0), "new-element");
+        resolver.setValue(context, base, new Integer(0), "new-element");
 
         Assert.assertEquals("new-element",
-                resolver.getValue(context, base, Integer.valueOf(0)));
+                resolver.getValue(context, base, new Integer(0)));
         Assert.assertTrue(context.isPropertyResolved());
 
-        resolver.setValue(context, base, Integer.valueOf(0), null);
+        resolver.setValue(context, base, new Integer(0), null);
 
         Assert.assertEquals(null,
-                resolver.getValue(context, base, Integer.valueOf(0)));
+                resolver.getValue(context, base, new Integer(0)));
         Assert.assertTrue(context.isPropertyResolved());
     }
 
@@ -220,7 +205,7 @@ public class TestArrayELResolver {
         ELContext context = new ELContextImpl();
 
         String[] base = new String[] { "element" };
-        resolver.setValue(context, base, Integer.valueOf(1), "new-element");
+        resolver.setValue(context, base, new Integer(1), "new-element");
     }
 
     /**
@@ -233,7 +218,7 @@ public class TestArrayELResolver {
         ELContext context = new ELContextImpl();
 
         String[] base = new String[] { "element" };
-        resolver.setValue(context, base, Integer.valueOf(0), Integer.valueOf(1));
+        resolver.setValue(context, base, new Integer(0), new Integer(1));
     }
 
     /**
@@ -246,7 +231,7 @@ public class TestArrayELResolver {
         ELContext context = new ELContextImpl();
 
         int[] base = new int[] { 1, 2, 3 };
-        resolver.setValue(context, base, Integer.valueOf(1), Integer.valueOf(4));
+        resolver.setValue(context, base, new Integer(1), Integer.valueOf(4));
 
         Assert.assertEquals(Integer.valueOf(base[1]), Integer.valueOf(4));
     }
@@ -292,14 +277,14 @@ public class TestArrayELResolver {
         ELContext context = new ELContextImpl();
 
         String[] base = new String[] { "element" };
-        boolean result = resolver.isReadOnly(context, base, Integer.valueOf(0));
+        boolean result = resolver.isReadOnly(context, base, new Integer(0));
 
         Assert.assertFalse(result);
         Assert.assertTrue(context.isPropertyResolved());
 
         resolver = new ArrayELResolver(true);
 
-        result = resolver.isReadOnly(context, base, Integer.valueOf(0));
+        result = resolver.isReadOnly(context, base, new Integer(0));
 
         Assert.assertTrue(result);
         Assert.assertTrue(context.isPropertyResolved());
@@ -314,29 +299,7 @@ public class TestArrayELResolver {
         ELContext context = new ELContextImpl();
 
         String[] base = new String[] { "element" };
-        resolver.isReadOnly(context, base, Integer.valueOf(1));
-    }
-
-    /**
-     * Tests that a result is returned even when a coercion cannot be performed.
-     */
-    @Test
-    public void testIsReadOnly05() {
-        ArrayELResolver resolver = new ArrayELResolver();
-        ELContext context = new ELContextImpl();
-
-        String[] base = new String[] { "element" };
-        boolean result = resolver.isReadOnly(context, base, "key");
-
-        Assert.assertFalse(result);
-        Assert.assertTrue(context.isPropertyResolved());
-
-        resolver = new ArrayELResolver(true);
-
-        result = resolver.isReadOnly(context, base, "key");
-
-        Assert.assertTrue(result);
-        Assert.assertTrue(context.isPropertyResolved());
+        resolver.isReadOnly(context, base, new Integer(1));
     }
 
     private void doNegativeTest(Object base, Object trigger,
