@@ -16,17 +16,15 @@
  */
 package org.apache.catalina.tribes.demos;
 
-import java.awt.Color;
-import java.awt.Component;
+import java.io.Serializable;
+import java.util.Map;
+
 import java.awt.ComponentOrientation;
 import java.awt.Dimension;
 import java.awt.event.ActionEvent;
 import java.awt.event.ActionListener;
 import java.awt.event.MouseAdapter;
 import java.awt.event.MouseEvent;
-import java.io.Serializable;
-import java.util.Random;
-
 import javax.swing.BoxLayout;
 import javax.swing.JButton;
 import javax.swing.JFrame;
@@ -35,153 +33,103 @@ import javax.swing.JScrollPane;
 import javax.swing.JTable;
 import javax.swing.JTextField;
 import javax.swing.table.AbstractTableModel;
-import javax.swing.table.DefaultTableCellRenderer;
-import javax.swing.table.TableColumn;
+import javax.swing.table.TableModel;
 
 import org.apache.catalina.tribes.Channel;
 import org.apache.catalina.tribes.ChannelListener;
 import org.apache.catalina.tribes.ManagedChannel;
 import org.apache.catalina.tribes.Member;
 import org.apache.catalina.tribes.MembershipListener;
+import org.apache.catalina.tribes.tipis.AbstractReplicatedMap;
 import org.apache.catalina.tribes.tipis.LazyReplicatedMap;
+import javax.swing.table.DefaultTableCellRenderer;
+import java.awt.Color;
+import java.awt.Component;
+import javax.swing.table.TableColumn;
+import org.apache.catalina.tribes.util.UUIDGenerator;
+import org.apache.catalina.tribes.util.Arrays;
+import java.util.Set;
+import java.util.Random;
 
 /**
- * Example of how the lazy replicated map works, also shows how the BackupManager
- * works in a Tomcat cluster
- * @author fhanik
- * @version 1.1
+ * <p>Title: </p>
+ *
+ * <p>Description: </p>
+ *
+ * <p>Company: </p>
+ *
+ * @author not attributable
+ * @version 1.0
  */
 public class MapDemo implements ChannelListener, MembershipListener{
-
-    /**
-     * The Map containing the replicated data
-     */
-    protected LazyReplicatedMap<String,StringBuilder> map;
-
-    /**
-     * Table to be displayed in Swing
-     */
+    
+    protected LazyReplicatedMap map;
     protected SimpleTableDemo table;
-
-    /**
-     * Constructs a map demo object.
-     * @param channel - the Tribes channel object to be used for communication
-     * @param mapName - the name of this map
-     */
+    
     public MapDemo(Channel channel, String mapName ) {
-        //instantiate the replicated map
-        map = new LazyReplicatedMap<String,StringBuilder>(null, channel, 5000,
-                mapName, null);
-        //create a gui, name it with the member name of this JVM
+        map = new LazyReplicatedMap(null,channel,5000, mapName,null);
         table = SimpleTableDemo.createAndShowGUI(map,channel.getLocalMember(false).getName());
-        //add ourself as a listener for messages
         channel.addChannelListener(this);
-        //add ourself as a listener for memberships
         channel.addMembershipListener(this);
-        //initialize the map by receiving a fake message
+//        for ( int i=0; i<1000; i++ ) {
+//            map.put("MyKey-"+i,"My String Value-"+i);
+//        }
         this.messageReceived(null,null);
     }
-
-    /**
-     * Decides if the messageReceived should be invoked
-     * will always return false since we rely on the
-     * lazy map to do all the messaging for us
-     */
-    @Override
+    
     public boolean accept(Serializable msg, Member source) {
-        //simple refresh the table model
         table.dataModel.getValueAt(-1,-1);
         return false;
     }
-
-    /**
-     * Invoked if accept returns true.
-     * No op for now
-     * @param msg - the message received
-     * @param source - the sending member
-     */
-    @Override
+    
     public void messageReceived(Serializable msg, Member source) {
-        // NOOP
+        
     }
-
-    /**
-     * Invoked when a member is added to the group
-     */
-    @Override
+    
     public void memberAdded(Member member) {
-        // NOOP
     }
-
-    /**
-     * Invoked when a member leaves the group
-     */
-    @Override
     public void memberDisappeared(Member member) {
-        //just refresh the table model
         table.dataModel.getValueAt(-1,-1);
     }
-
-    /**
-     * Prints usage
-     */
+    
     public static void usage() {
         System.out.println("Tribes MapDemo.");
-        System.out.println("Usage:\n\t" +
+        System.out.println("Usage:\n\t" + 
                            "java MapDemo [channel options] mapName\n\t" +
                            "\tChannel options:" +
                            ChannelCreator.usage());
     }
 
-    /**
-     * Main method
-     * @param args
-     * @throws Exception
-     */
-    @SuppressWarnings("unused")
     public static void main(String[] args) throws Exception {
         long start = System.currentTimeMillis();
-        //create a channel object
         ManagedChannel channel = (ManagedChannel) ChannelCreator.createChannel(args);
-        //define a map name, unless one is defined as a parameters
         String mapName = "MapDemo";
         if ( args.length > 0 && (!args[args.length-1].startsWith("-"))) {
             mapName = args[args.length-1];
         }
-        //start the channel
-        channel.start(Channel.DEFAULT);
-        //listen for shutdown
+        channel.start(channel.DEFAULT);
         Runtime.getRuntime().addShutdownHook(new Shutdown(channel));
-        //create a map demo object
-        new MapDemo(channel,mapName);
-
-        //put the main thread to sleep until we are done
+        MapDemo demo = new MapDemo(channel,mapName);
+        
         System.out.println("System test complete, time to start="+(System.currentTimeMillis()-start)+" ms. Sleeping to let threads finish.");
         Thread.sleep(60 * 1000 * 60);
     }
 
-    /**
-     * Listens for shutdown events, and stops this instance
-     */
-    public static class Shutdown extends Thread {
-        //the channel running in this demo
+    public static class Shutdown
+        extends Thread {
         ManagedChannel channel = null;
-
         public Shutdown(ManagedChannel channel) {
             this.channel = channel;
         }
 
-
-        @Override
         public void run() {
             System.out.println("Shutting down...");
-            //create an exit thread that forces a shutdown if the JVM wont exit cleanly
             SystemExit exit = new SystemExit(5000);
             exit.setDaemon(true);
             exit.start();
             try {
-                //stop the channel
-                channel.stop(Channel.DEFAULT);
+                channel.stop(channel.DEFAULT);
+
             } catch (Exception x) {
                 x.printStackTrace();
             }
@@ -189,13 +137,13 @@ public class MapDemo implements ChannelListener, MembershipListener{
         }
     }
 
-    public static class SystemExit extends Thread {
+    public static class SystemExit
+        extends Thread {
         private long delay;
         public SystemExit(long delay) {
             this.delay = delay;
         }
 
-        @Override
         public void run() {
             try {
                 Thread.sleep(delay);
@@ -203,22 +151,19 @@ public class MapDemo implements ChannelListener, MembershipListener{
                 x.printStackTrace();
             }
             System.exit(0);
+
         }
     }
 
-    public static class SimpleTableDemo extends JPanel
-            implements ActionListener {
-
-        private static final long serialVersionUID = 1L;
-
+    public static class SimpleTableDemo
+        extends JPanel implements ActionListener{
         private static int WIDTH = 550;
-
-        private LazyReplicatedMap<String,StringBuilder> map;
+        
+        private LazyReplicatedMap map;
         private boolean DEBUG = false;
         AbstractTableModel dataModel = new AbstractTableModel() {
-
-
-            private static final long serialVersionUID = 1L;
+            
+            
             String[] columnNames = {
                                    "Rownum",
                                    "Key",
@@ -229,24 +174,21 @@ public class MapDemo implements ChannelListener, MembershipListener{
                                    "isProxy",
                                    "isBackup"};
 
-            @Override
             public int getColumnCount() { return columnNames.length; }
-
-            @Override
+    
             public int getRowCount() {return map.sizeFull() +1; }
-
-            public StringBuilder getMemberNames(Member[] members){
-                StringBuilder buf = new StringBuilder();
+            
+            public StringBuffer getMemberNames(Member[] members){
+                StringBuffer buf = new StringBuffer();
                 if ( members!=null ) {
-                    for (Member member : members) {
-                        buf.append(member.getName());
+                    for (int i=0;i<members.length; i++ ) {
+                        buf.append(members[i].getName());
                         buf.append("; ");
                     }
                 }
                 return buf;
             }
-
-            @Override
+            
             public Object getValueAt(int row, int col) {
                 if ( row==-1 ) {
                     update();
@@ -255,38 +197,37 @@ public class MapDemo implements ChannelListener, MembershipListener{
                 if ( row == 0 ) return columnNames[col];
                 Object[] keys = map.keySetFull().toArray();
                 String key = (String)keys [row-1];
-                LazyReplicatedMap.MapEntry<String,StringBuilder> entry =
-                        map.getInternal(key);
+                LazyReplicatedMap.MapEntry entry = map.getInternal(key);
                 switch (col) {
                     case 0: return String.valueOf(row);
                     case 1: return entry.getKey();
                     case 2: return entry.getValue();
                     case 3: return entry.getPrimary()!=null?entry.getPrimary().getName():"null";
                     case 4: return getMemberNames(entry.getBackupNodes());
-                    case 5: return Boolean.valueOf(entry.isPrimary());
-                    case 6: return Boolean.valueOf(entry.isProxy());
-                    case 7: return Boolean.valueOf(entry.isBackup());
+                    case 5: return new Boolean(entry.isPrimary());
+                    case 6: return new Boolean(entry.isProxy());
+                    case 7: return new Boolean(entry.isBackup());
                     default: return "";
                 }
-
+                
             }
-
+            
             public void update() {
                 fireTableDataChanged();
             }
         };
-
+        
         JTextField txtAddKey = new JTextField(20);
         JTextField txtAddValue = new JTextField(20);
         JTextField txtRemoveKey = new JTextField(20);
         JTextField txtChangeKey = new JTextField(20);
         JTextField txtChangeValue = new JTextField(20);
-
+        
         JTable table = null;
-        public SimpleTableDemo(LazyReplicatedMap<String,StringBuilder> map) {
+        public SimpleTableDemo(LazyReplicatedMap map) {
             super();
             this.map = map;
-
+            
             this.setComponentOrientation(ComponentOrientation.LEFT_TO_RIGHT);
 
             //final JTable table = new JTable(data, columnNames);
@@ -301,13 +242,12 @@ public class MapDemo implements ChannelListener, MembershipListener{
 
             if (DEBUG) {
                 table.addMouseListener(new MouseAdapter() {
-                    @Override
                     public void mouseClicked(MouseEvent e) {
                         printDebugData(table);
                     }
                 });
             }
-
+            
             //setLayout(new GridLayout(5, 0));
             setLayout(new BoxLayout(this, BoxLayout.Y_AXIS));
 
@@ -316,7 +256,7 @@ public class MapDemo implements ChannelListener, MembershipListener{
 
             //Add the scroll pane to this panel.
             add(scrollPane);
-
+            
             //create a add value button
             JPanel addpanel = new JPanel();
             addpanel.setPreferredSize(new Dimension(WIDTH,30));
@@ -325,7 +265,7 @@ public class MapDemo implements ChannelListener, MembershipListener{
             addpanel.add(txtAddValue);
             addpanel.setMaximumSize(new Dimension(WIDTH,30));
             add(addpanel);
-
+            
             //create a remove value button
             JPanel removepanel = new JPanel( );
             removepanel.setPreferredSize(new Dimension(WIDTH,30));
@@ -355,30 +295,29 @@ public class MapDemo implements ChannelListener, MembershipListener{
 
 
         }
-
+        
         public JButton createButton(String text, String command) {
             JButton button = new JButton(text);
             button.setActionCommand(command);
             button.addActionListener(this);
             return button;
         }
-
-        @Override
+        
         public void actionPerformed(ActionEvent e) {
             System.out.println(e.getActionCommand());
             if ( "add".equals(e.getActionCommand()) ) {
                 System.out.println("Add key:"+txtAddKey.getText()+" value:"+txtAddValue.getText());
-                map.put(txtAddKey.getText(),new StringBuilder(txtAddValue.getText()));
+                map.put(txtAddKey.getText(),new StringBuffer(txtAddValue.getText()));
             }
             if ( "change".equals(e.getActionCommand()) ) {
                 System.out.println("Change key:"+txtChangeKey.getText()+" value:"+txtChangeValue.getText());
-                StringBuilder buf = map.get(txtChangeKey.getText());
+                StringBuffer buf = (StringBuffer)map.get(txtChangeKey.getText());
                 if ( buf!=null ) {
                     buf.delete(0,buf.length());
                     buf.append(txtChangeValue.getText());
                     map.replicate(txtChangeKey.getText(),true);
                 } else {
-                    buf = new StringBuilder();
+                    buf = new StringBuffer();
                     buf.append(txtChangeValue.getText());
                     map.put(txtChangeKey.getText(),buf);
                 }
@@ -393,24 +332,23 @@ public class MapDemo implements ChannelListener, MembershipListener{
             }
             if ( "random".equals(e.getActionCommand()) ) {
                 Thread t = new Thread() {
-                    @Override
                     public void run() {
                         for (int i = 0; i < 5; i++) {
                             String key = random(5,0,0,true,true,null);
-                            map.put(key, new StringBuilder(key));
+                            map.put(key, new StringBuffer(key));
                             dataModel.fireTableDataChanged();
                             table.paint(table.getGraphics());
                             try {
                                 Thread.sleep(500);
                             } catch (InterruptedException x) {
-                                Thread.interrupted();
+                                Thread.currentThread().interrupted();
                             }
                         }
                     }
                 };
                 t.start();
             }
-
+            
             if ( "replicate".equals(e.getActionCommand()) ) {
                 System.out.println("Replicating out to the other nodes.");
                 map.replicate(true);
@@ -434,10 +372,10 @@ public class MapDemo implements ChannelListener, MembershipListener{
                     end = Integer.MAX_VALUE;
                 }
             }
-
+    
             char[] buffer = new char[count];
             int gap = end - start;
-
+    
             while (count-- != 0) {
                 char ch;
                 if (chars == null) {
@@ -447,7 +385,7 @@ public class MapDemo implements ChannelListener, MembershipListener{
                 }
                 if ((letters && Character.isLetter(ch))
                     || (numbers && Character.isDigit(ch))
-                    || (!letters && !numbers))
+                    || (!letters && !numbers)) 
                 {
                     if(ch >= 56320 && ch <= 57343) {
                         if(count == 0) {
@@ -501,8 +439,7 @@ public class MapDemo implements ChannelListener, MembershipListener{
          * this method should be invoked from the
          * event-dispatching thread.
          */
-        public static SimpleTableDemo createAndShowGUI(
-                LazyReplicatedMap<String,StringBuilder> map, String title) {
+        public static SimpleTableDemo createAndShowGUI(LazyReplicatedMap map, String title) {
             //Make sure we have nice window decorations.
             JFrame.setDefaultLookAndFeelDecorated(true);
 
@@ -523,16 +460,13 @@ public class MapDemo implements ChannelListener, MembershipListener{
             return newContentPane;
         }
     }
-
+    
     static class ColorRenderer extends DefaultTableCellRenderer {
-
-        private static final long serialVersionUID = 1L;
-
+        
         public ColorRenderer() {
             super();
         }
 
-        @Override
         public Component getTableCellRendererComponent
             (JTable table, Object value, boolean isSelected,
              boolean hasFocus, int row, int column) {
@@ -549,10 +483,14 @@ public class MapDemo implements ChannelListener, MembershipListener{
                 else if (backup) color = Color.BLUE;
                 if ( color != null ) cell.setBackground(color);
             }
+//            System.out.println("Row:"+row+" Column:"+column+" Color:"+cell.getBackground());
+//            cell.setBackground(bkgndColor);
+//            cell.setForeground(fgndColor);
+
             return cell;
         }
-
-
+        
+        
     }
 
 
